force-app/main/default/objects/Subscription_License__c/Subscription_License__c.object-meta.xml
<CustomObject>
    <label>Subscription License</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>SubLicID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>