force-app/main/default/objects/Subscription_License__c/fields/BRIGHT_PartyLicense_Key__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_PartyLicense_Key__c</fullName>
    <label>BRIGHT PartyLicense Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>