force-app/main/default/objects/Subscription_License__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Subscription Licenses</relationshipLabel>
    <relationshipName>Subscription_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>