force-app/main/default/objects/Subscription_License__c/fields/License_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Contact_Name__c</fullName>
    <formula>Subscription__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Subscription__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Contact Name</label>
    <type>Text</type>
</CustomField>