force-app/main/default/objects/Subscription_License__c/fields/License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration_Date__c</fullName>
    <formula>License__r.License_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>