force-app/main/default/objects/Subscription_License__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <formula>License__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Number</label>
    <type>Text</type>
</CustomField>