force-app/main/default/objects/Subscription_License__c/fields/License_State__c.field-meta.xml
<CustomField>
    <fullName>License_State__c</fullName>
    <formula>TEXT( License__r.License_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License State</label>
    <type>Text</type>
</CustomField>