force-app/main/default/objects/Subscription_License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <formula>TEXT( License__r.License_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Type</label>
    <type>Text</type>
</CustomField>