force-app/main/default/objects/Subscription_License__c/fields/PrismRelLicenseID__c.field-meta.xml
<CustomField>
    <fullName>PrismRelLicenseID__c</fullName>
    <label>PrismRelLicenseID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>