force-app/main/default/objects/Subscription_License__c/fields/SoftDelete__c.field-meta.xml
<CustomField>
    <fullName>SoftDelete__c</fullName>
    <description>This field controls whether the License should be deleted from Cornerstone.  A SysPartyLicense key must exist on this record and the SoftDelete picklist should be set to Yes before saving.</description>
    <inlineHelpText>This field controls whether the License should be deleted from Cornerstone.  A SysPartyLicense key must exist on this record and the SoftDelete picklist should be set to Yes before saving.</inlineHelpText>
    <label>SoftDelete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>