force-app/main/default/objects/Subscription_License__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Subscription Licenses</relationshipLabel>
    <relationshipName>Subscription_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>