force-app/main/default/objects/Subscription_License__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <formula>Subscription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription ID</label>
    <type>Text</type>
</CustomField>