force-app/main/default/objects/Subscription_License__c/listViews/AllSubscriptionLicenses.listView-meta.xml
<ListView>
    <fullName>AllSubscriptionLicenses</fullName>
    <columns>NAME</columns>
    <columns>License_Contact_Name__c</columns>
    <columns>Subscription__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SoftDelete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>